[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
coz = "0.1.3"
nom = "7.1.3"
nom-supreme = "0.8.0"
num = "0.4.1"
pcre2 = "0.2.6"
rayon = "1.8.0"
regex = "1.10.2"

[profile.release]
debug = 1
